<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b2631"
    tools:context=".login">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="58dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:text="@string/email">

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/App"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="467dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="650dp"
        android:text="@string/credit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        android:onClick="register"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="27dp"
        android:layout_toLeftOf="@id/editText1"
        android:text="@string/LoginRole"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textView6"
        android:layout_alignLeft="@id/textView5"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="26dp"
        android:text="@string/method"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignLeft="@id/textView8"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-187dp"
        android:text="@string/LoginStatus"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView4"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView8"
        android:layout_alignLeft="@id/textView6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="105dp"
        android:onClick="Login"
        android:text="@string/LoginGet"
        android:textColor="@android:color/white" />

    <CheckBox
        android:id="@+id/checkBox"
        android:textColor="@android:color/darker_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:text="@string/checkbox" />

</RelativeLayout>