<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b2631"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="REGISTER"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Username" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="0dp"
        android:background="#283747"
        android:ems="10"
        android:inputType="text"
        android:text="Confirm Password" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:text="i agree to the Terms od Services and Privacy Policy"
        android:layout_alignLeft="@+id/editText2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:text="REGISTER"
        android:onClick="register"/>


</RelativeLayout>